# Lat-Epig

./: .dockerignore  .envrc  .gitignore  CITATION.cff  Dockerfile  Epigraphy Scraper.ipynb  Epigraphy Scrapyer.ipynb  EpigraphyScraper.ipynb  EpigraphyScraper.ipynb.orig  EpigraphyScraperOld.ipynb  LatEpig_Metadata_Description.txt  Map.ipynb  MarkerCluster.ipynb  Pipfile  README.md  analysis.ipynb  dockerScrapeAll.sh  downloadData.sh  findImports.sh  findUnknownPartners.py  foliumTest.ipynb  interface.py  jupyter_config.json  jupyter_notebook_config.py  jupyter_server_config.py  localPipInstall.sh  make_map.py  map_interface.py  map_requirements.txt  parse.py  pyproject.toml  requirements.txt  runTests.sh  runVoila.sh  scalebar.py  search_by_provinces.bsh  search_by_provinces.sh  setup.cfg  setup.py  setupJupyter.sh  (+3 more)
.ipynb_checkpoints/: Epigraphy Scraper-checkpoint.ipynb  Epigraphy Scrapyer-checkpoint.ipynb
Roman-Road-Network/: Readme.txt
case_study/: 2024-06-11-EDCS_via_Lat_Epig-term1_viator-697.json  2024-06-11-EDCS_via_Lat_Epig-term1_viator-697.tsv  Case_study_viator.Rmd  LatEpig_viator_lowercase_tit_sepulcrales.csv  LatEpig_viator_lowercase_tit_sepulcrales_eval.csv  pleiades-regions-magis-pelagios.geojson
cities/: Hanson2016_Cities_OxREP.csv  readme.txt
full_scrape_20210720/: 2021-07-21-province_Achaia+term1_%-2026.tsv  2021-07-21-province_Aegyptus+term1_%-1071.tsv  2021-07-21-province_Aegyptus+term1_%-1073.tsv  2021-07-21-province_AemiliaRegioVIII+term1_%-4662.tsv  2021-07-21-province_AlpesCottiae+term1_%-505.tsv  2021-07-21-province_AlpesGraiae+term1_%-200.tsv  2021-07-21-province_AlpesMaritimae+term1_%-583.tsv  2021-07-21-province_AlpesPoeninae+term1_%-246.tsv  2021-07-21-province_ApuliaetCalabriaRegioII+term1_%-6557.tsv  2021-07-21-province_Aquitanica+term1_%-17052.tsv  2021-07-21-province_Arabia+term1_%-1120.tsv  (+44 more)
(+187 files in other folders)
