[metadata]
name = lat-epig
version = 0.0.1
author = Brian Ballsun-Stanton
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mqAncientHistory/EpigraphyScraperNotebook
project_urls =
    Bug Tracker = https://github.com/mqAncientHistory/EpigraphyScraperNotebook/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9.5

[options.packages.find]
where = src