[metadata]
name = lat-epig
version = 2.1.0
author = Brian Ballsun-Stanton
author_email = brian.ballsun-stanton@mq.edu.au
description = This programme extracts the output of a search query from the [Epigraphik-Datenbank  Clauss / Slaby (EDCS)](http://www.manfredclauss.de/) in a reproducible manner and saves it as a TSV file. The output can be also plotted to a map of the Roman Empire, along with the system of Roman Provinces, roads, and cities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mqAncientHistory/Lat-Epig
project_urls =
    Bug Tracker = https://github.com/mqAncientHistory/Lat-Epig/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta
    Framework :: Jupyter
    Intended Audience :: Education
    Intended Audience :: Science/Research
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src